course 2 years plan - html file - added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
             top: 90%;
             color: var(--learningHubColor);
         }
+        .courses {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .course {
+            margin-top: 20px;
+            text-decoration: none;
+            color: #000;
+            border-bottom: dashed;
+        }
+        .course:hover {
+            border-bottom: solid;
+        }
     </style>
 </head>
 <body>
@@ -46,6 +59,9 @@
         <div class="logo"></div>
         <div class="znova">zNova</div>
         <div class="learning-hub">Learning Hub</div>
+    </div>
+    <div class="courses">
+        <a class="course" href="course2y.html">2 Years Course Plan for Kids</a>
     </div>
 </body>
 </html>
