--- a/course2y.html
+++ b/course2y.html
@@ -9,7 +9,7 @@
         * { margin: 0; }
         h3 { margin: 15px; }
         h4 { margin: 0 15px; }
-        ul { margin: 0 15px; }
+        ul { margin: 20px 10px; }
         li { margin: 10px 0; }
         footer {
             padding: 10px 15px;
@@ -26,7 +26,7 @@
         <li><b>‘Coding’</b> ဆိုတဲ့ဝေါဟာရကို အရင်ရှင်းပြရရင်တော့ ကွန်ပျူတာ(Computer) နဲ့ဆက်သွယ်မည့်နည်းလမ်းပါပဲ။</li>
         <li>ကွန်ပျူတာနဲ့ ဆက်သွယ်ရန်အတွက် ကွန်ပျူတာနားလည်မည့်ဘာသာစကားကို အသုံးပြုရမှာဖြစ်ပြီး တိကျတဲ့လုပ်ငန်းတွေလုပ်ဖို့ ညွန်ကြားချက်တွေပေးရမှာဖြစ်ပါတယ်။</li>
         <li><b>‘Coding’</b> သင်ယူတာဟာ language သင်တာဖြစ်သလို ညွှန်ကြားချက်တွေပေးတတ်အောင်ပါ တဆက်တည်းသင်ယူသွားမှာပါ။</li>
-        <li><b>‘Coding’</b> တတ်သွားတဲ့အခါ Computer Software, Websites, Applications နဲ့ Video Games တွေကိုဖန်နိုင်သွားမှာဖြစ်ပါတယ်။</li>
+        <li><b>‘Coding’</b> တတ်သွားတဲ့အခါ Computer Software, Websites, Applications နဲ့ Video Games တွေကိုဖန်တီးနိုင်သွားမှာဖြစ်ပါတယ်။</li>
     </ul>
     <h4>
         Programming သင်ယူတဲ့အခါ ကလေးတွေဘာတွေထပ်ရလာမလဲ
@@ -53,17 +53,17 @@
     <hr/>
 
     <h3>
-        အခု zNova မှာ ကလေးတွေ ကျောင်းတက်ရင်းနဲ့ ကျောင်းစာလဲမထိခိုက်ပဲ ပေါ့ပေါ့ပါးပါး သင်ယူနိုင်မည့် ၂ နှစ်တာ Coding လေ့လာနိုင်မည့် Program တစ်ခုရှိပါတယ်။
+        အခု zNova မှာ ကလေးတွေ ကျောင်းတက်ရင်းနဲ့ ကျောင်းစာလဲမထိခိုက်ပဲ ပေါ့ပေါ့ပါးပါး သင်ယူနိုင်မည့် ၂ နှစ်တာ Coding လေ့လာနိုင်မည့် Programme တစ်ခုရှိပါတယ်။
     </h3>
 
     <h4>၂ နှစ်တာသင်ယူပြီးဘာတွေလုပ်နိုင်မှာလဲ</h4>
     <ul>
-        <li>နိုင်ငံတကာက အလုပ်တွေကို အိမ်မှာထိုင်နေရင်းနဲ့ လုပ်ကိုင်နိုင်မည်</li>
-        <li>ဘယ်သွားသွား ဘယ်ရောက်ရောက် Internet နဲ့ Laptop ရှိရုံနဲ့ အလုပ်တွေလုပ်နေနိုင်မယ်</li>
-        <li>သင့်တင့်(မြင့်မား)တဲ့ လစာကြေးငွေနဲ့ Professional တစ်ယောက်အဖြစ်ရပ်တည်နိုင်မည်</li>
-        <li>Freelance လုပ်ကိုင်နိုင်တာကြောင့် လစာအပြင် အပိုဝင်ငွေပါရရှိနိုင်မည်</li>
-        <li>အချိန်ဖြုန်းချင်စိတ်တွေ နည်းပါးလာမည်</li>
-        <li>ကိုယ်တိုင်ဖန်တီးတဲ့အပေါ်မှာ ပြည့်ဝတဲ့ ကျေနပ်ပျော်ရွှင်မှု အမြဲတမ်းရနေမယ်</li>
+        <li>နိုင်ငံတကာက အလုပ်တွေကို အိမ်မှာထိုင်နေရင်းနဲ့ လုပ်ကိုင်နိုင်မည်။</li>
+        <li>ဘယ်သွားသွား ဘယ်ရောက်ရောက် Internet နဲ့ Laptop ရှိရုံနဲ့ အလုပ်တွေလုပ်နေနိုင်မယ်။</li>
+        <li>သင့်တင့်(မြင့်မား)တဲ့ လစာငွေကြေးနဲ့ Professional တစ်ယောက်အဖြစ်ရပ်တည်နိုင်မည်။</li>
+        <li>Freelance လုပ်ကိုင်နိုင်တာကြောင့် လစာအပြင် အပိုဝင်ငွေပါရရှိနိုင်မည်။</li>
+        <li>အချိန်ဖြုန်းချင်စိတ်တွေ နည်းပါးလာမည်။</li>
+        <li>ကိုယ်တိုင်ဖန်တီးတဲ့အပေါ်မှာ ပြည့်ဝတဲ့ ကျေနပ်ပျော်ရွှင်မှု အမြဲတမ်းရနေမယ်။</li>
     </ul>
 
     <h4>၂ နှစ်သင်ပြီးဘာတွေထပ်လေ့လာလို့ရနိုင်မလဲ</h4>
@@ -79,7 +79,7 @@
         <li>ကလေးတွေဟာ ကိုယ်ပိုင်လွတ်လပ်ခွင့်နဲ့ မိမိရဲ့ Professional ကိုရွေးချယ်ခွင့်ရသင့်ပါတယ်။</li>
         <li>အင်္ဂျင်နီယာဖြစ်ခွင့်ရှိသလို၊​ ဆရာဝန်ကြီးလည်းဖြစ်နိုင်ပါတယ်။</li>
         <li>သို့ပေမည့် နည်းပညာခေတ်ဖြစ်သည့်အလျှောက် နည်းပညာနဲ့ကင်းကွာတဲ့ လုပ်ငန်းတွေဟာမရှိတာ့ပါဘူး။</li>
-        <li>ဒါကြောင့် Coding ကိုလေ့လာထားတဲ့သူတစ်ယောက်အနေနဲ့ နည်းပညာသဘောသဘာဝကို သိထားလို့ ဘယ်လမ်းကြောင်းကိုပဲရွေးချယ်ပါစေ အမြဲ နှာတစ်ဖျားအသာနဲ့ လျှောက်လှမ်းနိုင်မှာဖြစ်ပါတယ်။</li>
+        <li>ဒါကြောင့် <b>Coding</b> ကိုလေ့လာထားတဲ့သူတစ်ယောက်အနေနဲ့ နည်းပညာသဘောသဘာဝကို သိထားလို့ ဘယ်လမ်းကြောင်းကိုပဲရွေးချယ်ပါစေ အမြဲ နှာတစ်ဖျားအသာနဲ့ လျှောက်လှမ်းနိုင်မှာဖြစ်ပါတယ်။</li>
     </ul>
 
     <hr/>
