--- a/course2y.html
+++ b/course2y.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zNova | 2 Years Course Plan for Kids</title>
     <style>
-        * { margin: 0; }
+        * { 
+            margin: 0;
+            white-space: normal;
+        }
         h3 { margin: 15px; }
         h4 { margin: 0 15px; }
         ul { margin: 20px 10px; }
