--- a/course2y.html
+++ b/course2y.html
@@ -42,7 +42,7 @@
             <b>How to Think</b> - မတူညီတဲ့ ရှုထောင့်ပေါင်းစုံကနေ တွေးခေါ်နိုင်စွမ်းတွေရရှိလာမှာဖြစ်ပါတယ်။
         </li>
         <li>
-            <b>Creativity</b> - စိတ်ကူးအသိဉာဏ်တွေကို ချဲ့ထွင့်အသုံးပြုတတ်လာမှာဖြစ်ပါတယ်။
+            <b>Creativity</b> - စိတ်ကူးအသိဉာဏ်တွေကို ချဲ့ထွင်အသုံးပြုတတ်လာမှာဖြစ်ပါတယ်။
         </li>
     </ul>
 
