--- a/course2y.html
+++ b/course2y.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+        name="description"
+        content="zNova - Learning Hub"
+    />
+    <meta name="keywords" content="zNova, learning hub, education, web, software, website, information technology, it">
+    <meta name="author" content="zNova">
+    <meta property="og:title" content="zNova">
+    <meta property="og:description" content="zNova - Learning Hub">
+    <meta property="og:url" content="https://znova.one">
+    <meta property="og:image" content="https://znova.one/logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="X Baydin">
     <title>zNova | 2 Years Course Plan for Kids</title>
     <style>
         * { 
